fix layout bug in project pages

--- a/cubo/index.html
+++ b/cubo/index.html
@@ -41,7 +41,7 @@
         <div id="home-title">← Home</div>
       </a>
       <a id="next" href="../music">
-        <div id="home-title">Next: Music APP →</div>
+        <div id="home-title">Next: Music →</div>
       </a>
     </nav>
 
