--- a/pinchfun/index.html
+++ b/pinchfun/index.html
@@ -38,10 +38,10 @@
   <body>
     <nav>
       <a id="home" href="../cubo">
-        <div id="home-title">← Last: Music APP</div>
+        <div id="home-title">← Last: Music</div>
       </a>
       <a id="next" href="../../#portfolio">
-        <div id="home-title">More Projects →</div>
+        <div id="home-title">More →</div>
       </a>
     </nav>
 
