--- a/index.html
+++ b/index.html
@@ -140,13 +140,16 @@
 
     <header>
       <h1>
-        Hello! I'm ChiaYu, a happy hybrid who loves to build products that people love.
+        Hello! I'm ChiaYu.
       </h1>
       <p>
-        I support organizations to find the intersection of user needs and business opportunities. As a product designer, I’m a generalist who can do design, research, and code.
+        I am a product designer and user researcher passionate about building products that people can count on in their daily life. I support organizations in finding the intersection of user needs and business opportunities.
       <p/>
       <p>
-        I'm a product designer with 2+ years of experience, ex-<a href="https://us.getcubo.com" target="_blank">CuboAi</a> and ex-<a href="https://pebbo.co/" target="_blank">PEBBO</a>. I'm currently providing web design and development service for start-ups, open to working in a Product/UX role. I love building products that people can depend on in their daily life.
+        I'm now working on web and product design with startups on a freelance base. I've worked for <a href="https://us.getcubo.com" target="_blank">CuboAi</a>, <a href="https://pebbo.co/" target="_blank">PEBBO</a>, and academic institutions.
+      </p>
+      <p>
+        When it comes to design, I'm a generalist. I design, research and code. I enjoy being a hybrid contributing to every aspect related to products and people.
       </p>
         
       <div id="overlay">
